When scene scale is not 1.0, and units are "None," Blender assumes translations are in meters #41590

Closed
opened 2014-08-26 06:13:01 +02:00 by Tom Benedett · 6 comments

System Information
Windows 7 64-bit, GTX-580 GPU

Blender Version
Broken: buildbot 2.71.5 ea07d93
Worked: 2.70a official
Short description of error
When the scene scale is set to something other than 1 (when the units are set to meters or imperial,) and then the units are switched back to "none" without changing the scene scale back to 1, any translations input from the keyboard will be assumed to be in meters, not Blender Units.

So if the scene scale is set to, say, 0.2, and you select an object (or vertices/edges/faces in edit mode,) and move it up along the z-axis by 1 (by hitting the keys "g", "z", "1", and "enter", not by dragging it,) the object will be moved up by 5.0 units; that is, by 1/(scene scale), or 1 m. The translation vector displayed in the toolbar will read "0.000, 0.000, 5.000".

Exact steps for others to reproduce the error
Here (Translations_In_Meters,_not_Blender_Units.blend) is a .blend file; pretty much the default scene, but with the scene scale set to 0.2 and the units switched back to "none." Instructions, also included as a text block in the file, are as follows:

"With the default cube selected, hit g z 1 enter.
That should translate the cube upward along the z-axis by 1 unit. Instead, it translates the cube up by 1/0.2 units, where 0.2 is the scene scale, which you can see if you switch the scene units to meters.
Switch the units to meters, then hit g z -1 enter. That will move the cube down by 1 meter, and will put it exactly back at the origin.

Switch the units to feet, and g z 1 enter will move it up by 1', not 1 meter."

**System Information** Windows 7 64-bit, GTX-580 GPU **Blender Version** Broken: buildbot 2.71.5 ea07d93 Worked: 2.70a official **Short description of error** When the scene scale is set to something other than 1 (when the units are set to meters or imperial,) and then the units are switched back to "none" without changing the scene scale back to 1, any translations input from the keyboard will be assumed to be in meters, not Blender Units. So if the scene scale is set to, say, 0.2, and you select an object (or vertices/edges/faces in edit mode,) and move it up along the z-axis by 1 (by hitting the keys "g", "z", "1", and "enter", not by dragging it,) the object will be moved up by 5.0 units; that is, by 1/(scene scale), or 1 m. The translation vector displayed in the toolbar will read "0.000, 0.000, 5.000". **Exact steps for others to reproduce the error** Here ([Translations_In_Meters,_not_Blender_Units.blend](https://archive.blender.org/developer/F106768/Translations_In_Meters__not_Blender_Units.blend)) is a .blend file; pretty much the default scene, but with the scene scale set to 0.2 and the units switched back to "none." Instructions, also included as a text block in the file, are as follows: "With the default cube selected, hit g z 1 enter. That should translate the cube upward along the z-axis by 1 unit. Instead, it translates the cube up by 1/0.2 units, where 0.2 is the scene scale, which you can see if you switch the scene units to meters. Switch the units to meters, then hit g z -1 enter. That will move the cube down by 1 meter, and will put it exactly back at the origin. Switch the units to feet, and g z 1 enter will move it up by 1', not 1 meter."
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @moak

Added subscriber: @moak
Bastien Montagne self-assigned this 2014-08-26 06:36:48 +02:00

This issue was referenced by 01537ebc8433799f4e74356ae398cd7bb0fd6519

This issue was referenced by 01537ebc8433799f4e74356ae398cd7bb0fd6519

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 01537ebc84.

Closed by commit 01537ebc84.

This issue was referenced by 0e3fa0b761

This issue was referenced by 0e3fa0b7618fa86e97c5f46ae7208c082fd26eb7
Sign in to join this conversation.
3 Participants
Notifications
Due Date
No due date set.
Dependencies

No dependencies set.

Reference: blender/blender#41590
No description provided.